# pendulum

./: CMakeLists.txt  links.txt  main.cpp
GUI/: CMakeLists.txt  GUI.cpp  GUI.h  mainwindow.cpp  mainwindow.h
Integrator/: CMakeLists.txt  Integrator.cpp  Integrator.h
Integrator/methods/: RK4.cpp  RK4.h
Integrator/system/: model.cpp  model.h
Integrator/time/: myTime.cpp  myTime.h
PendulumSimulator/: CMakeLists.txt  PendulumSimulator.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
integrator/methods/: RK4.cpp  RK4.h
integrator/modules/: dimensions.h  integrator.h
integrator/modules/methods/: RK4_method.cpp
integrator/modules/system/: sysModel.cpp
integrator/system/: model.cpp  model.h
